// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatusItem renders custom aria labels 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-label="progressAriaLabel"
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="buttonAriaLabel"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-8"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item test"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-2"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom file name/size/icon/progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-4"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom function progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message 0
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-5"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom progress value/variant when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 42%.
      </div>
      <div
        class="pf-v6-c-progress pf-m-warning"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            42%
          </span>
          <span
            class="pf-v6-c-progress__status-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="42"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 42%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-7"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders expected values from a passed file object 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-3"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders with expected class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem rendersdefault progressAriaLiveMessage when nothing is passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-disabled="false"
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-6"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
